<resources>
    <string name="app_name">FruitHAP</string>

    <string name="alert_details_title">Alert details</string>
    <string name="alert_details_priority_label">Priority</string>
    <string name="alert_details_priority_low">Low</string>
    <string name="alert_details_priority_medium">Medium</string>
    <string name="alert_details_priority_high">High</string>
    <string name="alert_details_time">Time</string>
    <string name="alert_details_source">Source</string>
    <string name="alert_details_message">Message</string>

    <string name="title_alertlist">Alerts</string>
    <string name="no_alerts">No alerts available</string>

    <string name="title_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="turn_on_notification_service">Start notification service</string>
    <string name="turn_off_notification_service">Stop notification service</string>
    <string name="action_clear_list">Clear list</string>
    <string name="action_general_settings">General settings</string>
    <string name="clearing_list">Clearing list</string>

    <string name="caption_yes">Yes</string>
    <string name="caption_no">No</string>



    <string name="notification_service_started">Started notification service</string>
    <string name="notification_service_stopped">Stopped notification service</string>
    <string name="notification_service_error">Error starting/stopping notification service</string>
    <string name="notification_service_name">FruitHAP</string>
    <string name="notification_service_stopwarning">Are you sure you want to turn off the notification service? No alerts will be received and the dashboard won\'t be updated properly</string>
    <string name="notification_service_already_running">Notification service is already running</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_mark_as_read">Mark all alerts as read</string>
</resources>
