<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".EventNotificationDetailFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="7"
        android:layout_margin="10dp">

        <TextView
            android:text="@string/alert_details_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_columnSpan="2"
            android:layout_rowSpan="2"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:text="@string/alert_details_priority_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/priority_box"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:id="@+id/txtPriority" />

        <TextView
            android:text="@string/alert_details_time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:id="@+id/txtTimestamp" />

        <TextView
            android:text="@string/alert_details_source"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:id="@+id/txtSensorName" />

        <TextView
            android:text="@string/alert_details_message"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_gravity="left"
            android:layout_marginBottom="50dp"
            android:id="@+id/txtMessage" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_columnSpan="2"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:id="@+id/imgOptional" />
    </GridLayout>




</ScrollView>

