<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_listitem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="7"
        android:layout_margin="10dp">

        <TextView
            android:text="@string/alert_details_priority_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/priority_box"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:id="@+id/alert_detail_txtPriority" />

        <TextView
            android:text="@string/alert_details_time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:id="@+id/alert_detail_txtTimestamp" />

        <TextView
            android:text="@string/alert_details_source"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:id="@+id/alert_detail_txtSensorName" />

        <TextView
            android:text="@string/alert_details_message"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="40dp"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_gravity="left"
            android:layout_marginBottom="50dp"
            android:id="@+id/alert_detail_txtMessage" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_columnSpan="2"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:id="@+id/alert_detail_imgOptional" />
    </GridLayout>


</android.support.v7.widget.CardView>

